Opened 14 years ago
Closed 14 years ago
#7577 closed bug (fixed)
[ShowImage] opening screenshot and going fullscreen doesn't resize an image
Reported by: | diver | Owned by: | leavengood |
---|---|---|---|
Priority: | normal | Milestone: | R1/alpha3 |
Component: | Applications/ShowImage | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev41752, gcc4hybrid.
I've tried to go fullscreen using double click inside ShowImage but ended with a very small image in the center. Somehow it doesn't feel right.
Change History (1)
comment:1 by , 14 years ago
Milestone: | R1 → R1/alpha3 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev41772.