* We obviously need to relayout manually, as it looks like the view is not   layouted correctly after the resize. This fixes bug #7577. Ingo, is this   the desired behaviour of the layout engine, and if so, what's the rationale   behind it? * Removed extraneous FitToBounds() call in ShowImageView::SetHideIdlingCursor();   it doesn't belong there. +alpha

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41772 a95241bf-73f2-0310-859d-f6bbb57e9c96